<resources>
    <string name="app_name" translatable="false">Pinosu</string>

    <string name="button_login_with_nip55">Log in with NIP-55 app</string>
    <string name="button_logout">Log out</string>
    <string name="message_logging_out">Logging out…</string>
    <string name="message_login_success">Login successful</string>
    <string name="message_loading">Loading…</string>

    <string name="error_url_open_failed">Could not open URL</string>

    <string name="button_login_read_only">Browse with public key</string>
    <string name="hint_npub_input" translatable="false">npub1…</string>
    <string name="button_submit_read_only">Log in with public key</string>
    <string name="dialog_title_read_only_share_warning">Read-only mode</string>
    <string name="dialog_message_read_only_share_warning">You cannot add bookmarks in read-only mode. Please log in with a NIP-55 compatible app.</string>

    <string name="dialog_title_nip55_signer_required">NIP-55 app required</string>
    <string name="dialog_message_nip55_signer_required">A NIP-55 compatible app is required to use this app.</string>
    <string name="button_install">Install</string>
    <string name="button_close">Close</string>
    <string name="button_retry">Retry</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>

    <string name="dialog_title_error">Error</string>

    <string name="text_logged_in">Logged in</string>
    <string name="text_not_logged_in">Not logged in</string>

    <string name="title_bookmarks">Bookmarks</string>
    <string name="message_no_bookmarks">No bookmarks</string>
    <string name="tab_local">Local</string>
    <string name="tab_global">Global</string>

    <string name="dialog_title_select_url">Select URL</string>
    <string name="button_open">Open</string>

    <string name="title_licenses">Open Source Licenses</string>

    <string name="menu_licenses">Licenses</string>
    <string name="menu_app_info">App Info</string>
    <string name="menu_logout">Log out</string>

    <string name="title_app_info">App Info</string>
    <string name="label_version">Version</string>
    <string name="label_repository">Repository</string>
    <string name="url_repository" translatable="false">https://github.com/Omochice/Pinosu</string>

    <string name="title_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="settings_display_mode">Bookmark Display</string>
    <string name="display_mode_list">List</string>
    <string name="display_mode_grid">Grid</string>
    <string name="settings_theme_mode">Theme</string>
    <string name="theme_mode_system">Follow system</string>
    <string name="theme_mode_light">Light</string>
    <string name="theme_mode_dark">Dark</string>
    <string name="settings_language_mode">Language</string>
    <string name="language_mode_system">Follow system</string>
    <string name="language_mode_english">English</string>
    <string name="language_mode_japanese">Japanese</string>

    <string name="title_post_bookmark">Add Bookmark</string>
    <string name="title_edit_bookmark">Edit Bookmark</string>
    <string name="label_title">Title</string>
    <string name="hint_bookmark_title">Bookmark title</string>
    <string name="label_categories">Categories</string>
    <string name="hint_categories_help">Separate with commas</string>
    <string name="label_comment">Comment</string>
    <string name="hint_bookmark_comment">Notes about this bookmark</string>
    <string name="button_submit_bookmark">Post</string>

    <string name="title_bookmark_detail">Bookmark Detail</string>
    <string name="hint_comment_input">Enter a comment</string>
    <string name="message_no_comments">No comments</string>
    <string name="error_comment_empty">Please enter a comment</string>
    <string name="error_comment_create_failed">Failed to create comment</string>
    <string name="error_comment_post_failed">Failed to post comment</string>
    <string name="error_signed_event_build_failed">Failed to build signed event</string>
    <string name="error_signing_cancelled">Signing was cancelled</string>
    <string name="error_comments_load_failed">Failed to load comments</string>

    <string name="cd_navigate_up">Go back</string>
    <string name="cd_open_menu">Open menu</string>
    <string name="cd_add_bookmark">Add bookmark</string>
    <string name="cd_copy_version">Copy version info</string>
    <string name="cd_post_comment">Post comment</string>
    <string name="cd_ogp_image">Preview image</string>
    <string name="cd_author_avatar">Author profile image</string>
    <string name="cd_commenter_avatar">Commenter profile image</string>
    <string name="cd_remove_relay">Remove relay</string>
    <string name="cd_edit_bookmark">Edit bookmark</string>

    <string name="settings_bootstrap_relays">Bootstrap Relays</string>
    <string name="settings_bootstrap_relays_description">Relays used to fetch relay list metadata (kind 10002)</string>
    <string name="hint_relay_url" translatable="false">wss://</string>
    <string name="button_add_relay">Add</string>
    <string name="button_reset_defaults">Reset to defaults</string>

    <string name="settings_client_tag">Client Tag (NIP-89)</string>
    <string name="settings_client_tag_description">Include Pinosu client identifier in published events</string>

    <string name="menu_copy_content">Copy content</string>
    <string name="menu_copy_raw_json">Copy raw JSON</string>
    <string name="menu_copy_nostr_link">Copy nostr link</string>

</resources>
